--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
 	<artifactId>devutility.test.database</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<spring-version>5.0.8.RELEASE</spring-version>
+	</properties>
 	<modules>
 		<module>devutility.test.database.spring-data</module>
 		<module>devutility.test.database.mybatis</module>
