--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-mongo/pom.xml
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-mongo/pom.xml
@@ -6,4 +6,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>devutility.test.database.spring-data-mongo</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.github.eagle6688</groupId>
+			<artifactId>devutility.external.mongo</artifactId>
+			<version>2.0.6.5</version>
+		</dependency>
+	</dependencies>
 </project>
