--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #Data source 1
 db1.sqlserver.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-db1.sqlserver.url=jdbc:sqlserver://10.38.24.11:1433;DatabaseName=MyTestDb1
-db1.sqlserver.username=test
-db1.sqlserver.password=test
+db1.sqlserver.url=${DB1_URL:jdbc:sqlserver://127.0.0.1:1433;DatabaseName=MyTestDb1}
+db1.sqlserver.username=${DB1_UID:tester}
+db1.sqlserver.password=${DB1_PWD:tester}
 db1.sqlserver.initial-size=1
 db1.sqlserver.min-idle=1
 db1.sqlserver.max-active=20
