--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -16,3 +16,9 @@ db1.sqlserver.test-on-return=false
 db1.sqlserver.pool-prepared-statements=false
 db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
 db1.sqlserver.filters=stat,wall,log4j,config
+
+#Data source 2
+db1.mysql.driver-class-name=com.mysql.jdbc.Driver
+db1.mysql.url=${DB2_URL:jdbc:mysql://192.168.31.60:3306/Test}?useUnicode=true&useSSL=false
+db1.mysql.username=${DB1_UID:tester}
+db1.mysql.password=${DB1_PWD:tester}
