--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=9006
+spring.application.name=spring-data-jpa
+
+#Display SQL command.
+spring.jpa.show-sql=true
+
+#Display SQL command for SQL Server. 
+logging.level.com.microsoft.sqlserver.jdbc=debug
+
+#Serialize JPA entity to Json string.
 spring.jackson.serialization.fail-on-empty-beans=false
