--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -18,7 +18,7 @@ db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
 db1.sqlserver.filters=stat,wall,log4j,config
 
 #Data source 2
-db2.mysql.driver-class-name=com.mysql.jdbc.Driver
-db2.mysql.url=${DB2_URL:jdbc:mysql://192.168.31.60:3306/Test}?useUnicode=true&useSSL=false
-db2.mysql.username=${DB1_UID:tester}
-db2.mysql.password=${DB1_PWD:tester}
+#db2.mysql.driver-class-name=com.mysql.jdbc.Driver
+#db2.mysql.url=${DB2_URL:jdbc:mysql://192.168.31.60:3306/Test}?useUnicode=true&useSSL=false
+#db2.mysql.username=${DB1_UID:tester}
+#db2.mysql.password=${DB1_PWD:tester}
