--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -9,3 +9,9 @@ logging.level.com.microsoft.sqlserver.jdbc=debug
 
 #Serialize JPA entity to Json string.
 spring.jackson.serialization.fail-on-empty-beans=false
+
+#Configuration for druid
+#spring.datasource.druid.stat-view-servlet.enabled=true
+#spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+#spring.datasource.druid.stat-view-servlet.login-username=admin
+#spring.datasource.druid.stat-view-servlet.login-password=admin
