--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -1,21 +1,25 @@
 #Data source 1
-db1.sqlserver.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db1.sqlserver.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 db1.sqlserver.url=${DB1_URL:jdbc:sqlserver://127.0.0.1:1433;DatabaseName=MyTestDb1}
 db1.sqlserver.username=${DB1_UID:tester}
 db1.sqlserver.password=${DB1_PWD:tester}
 db1.sqlserver.initial-size=1
 db1.sqlserver.min-idle=1
 db1.sqlserver.max-active=20
-db1.sqlserver.test-on-borrow=true
 db1.sqlserver.max-wait=60000
 db1.sqlserver.time-between-eviction-runs-millis=60000
 db1.sqlserver.min-evictable-idle-time-millis=300000
 db1.sqlserver.validation-query=select 1
+db1.sqlserver.test-on-borrow=true
 db1.sqlserver.test-While-Idle=true
 db1.sqlserver.test-on-return=false
 db1.sqlserver.pool-prepared-statements=false
 db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
-db1.sqlserver.filters=stat,wall,log4j,config
+
+db1.sqlserver.filter.stat.enabled=true
+db1.sqlserver.filter.stat.db-type=mssql
+db1.sqlserver.filter.stat.log-slow-sql=true
+db1.sqlserver.filter.stat.slow-sql-millis=2000
 
 #Data source 2
 #db2.mysql.driver-class-name=com.mysql.jdbc.Driver
