--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/pom.xml
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/pom.xml
@@ -41,11 +41,17 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<!-- Spring Boot end -->
-		<!-- jdbc -->
+
+		<!-- Database -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 		</dependency>
-		<!-- jdbc end -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>1.1.10</version>
+		</dependency>
+		<!-- Database end -->
 	</dependencies>
 </project>
