--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/pom.xml
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/pom.xml
@@ -48,6 +48,10 @@
 			<artifactId>mssql-jdbc</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
 			<version>1.1.10</version>
