--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -22,7 +22,24 @@ db1.sqlserver.filter.stat.log-slow-sql=true
 db1.sqlserver.filter.stat.slow-sql-millis=2000
 
 #Data source 2
-#db2.mysql.driver-class-name=com.mysql.jdbc.Driver
-#db2.mysql.url=${DB2_URL:jdbc:mysql://192.168.31.60:3306/Test}?useUnicode=true&useSSL=false
-#db2.mysql.username=${DB1_UID:tester}
-#db2.mysql.password=${DB1_PWD:tester}
+db2.mysql.driver-class-name=com.mysql.jdbc.Driver
+db2.mysql.url=${DB2_URL:jdbc:mysql://127.0.0.1:3306/Test}?useUnicode=true&useSSL=false
+db2.mysql.username=${DB2_UID:tester}
+db2.mysql.password=${DB2_PWD:tester}
+db2.mysql.initial-size=1
+db2.mysql.min-idle=1
+db2.mysql.max-active=20
+db2.mysql.max-wait=60000
+db2.mysql.time-between-eviction-runs-millis=60000
+db2.mysql.min-evictable-idle-time-millis=300000
+db2.mysql.validation-query=select 1
+db2.mysql.test-on-borrow=true
+db2.mysql.test-While-Idle=true
+db2.mysql.test-on-return=false
+db2.mysql.pool-prepared-statements=false
+db2.mysql.max-pool-prepared-statement-per-connection-size=20
+
+db2.mysql.filter.stat.enabled=true
+db2.mysql.filter.stat.db-type=mysql
+db2.mysql.filter.stat.log-slow-sql=true
+db2.mysql.filter.stat.slow-sql-millis=2000
