--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=9006
 spring.application.name=spring-data-jpa
 
+spring.jpa.open-in-view=true
+
 #Display SQL command.
 spring.jpa.show-sql=true
 
