--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -21,6 +21,10 @@ db1.sqlserver.filter.stat.db-type=mssql
 db1.sqlserver.filter.stat.log-slow-sql=true
 db1.sqlserver.filter.stat.slow-sql-millis=2000
 
+db1.sqlserver.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+db1.sqlserver.jpa.hibernate.show_sql=true
+db1.sqlserver.jpa.hibernate.format_sql=true
+
 #Data source 2
 db2.mysql.driver-class-name=com.mysql.jdbc.Driver
 db2.mysql.url=${DB2_URL:jdbc:mysql://127.0.0.1:3306/Test}?useUnicode=true&useSSL=false
