--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=spring-data-jpa
 spring.jpa.show-sql=true
 
 #Display SQL command for SQL Server. 
-logging.level.com.microsoft.sqlserver.jdbc=debug
+#logging.level.com.microsoft.sqlserver.jdbc=debug
 
 #Serialize JPA entity to Json string.
 spring.jackson.serialization.fail-on-empty-beans=false
