--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9006
 spring.application.name=spring-data-jpa
 
 #Display SQL command.
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 #Display SQL command for SQL Server. 
 #logging.level.com.microsoft.sqlserver.jdbc=debug
