--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/db.properties
@@ -47,3 +47,8 @@ db2.mysql.filter.stat.enabled=true
 db2.mysql.filter.stat.db-type=mysql
 db2.mysql.filter.stat.log-slow-sql=true
 db2.mysql.filter.stat.slow-sql-millis=2000
+
+db2.mysql.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+db2.mysql.jpa.hibernate.show_sql=true
+db2.mysql.jpa.hibernate.format_sql=true
+db2.mysql.jpa.hibernate.enable_lazy_load_no_trans=true
