--- a/devutility.test.database.spring-data/pom.xml
+++ b/devutility.test.database.spring-data/pom.xml
@@ -8,6 +8,11 @@
 	<artifactId>devutility.test.database.spring-data</artifactId>
 	<packaging>pom</packaging>
 	<dependencies>
+		<dependency>
+			<groupId>com.github.eagle6688</groupId>
+			<artifactId>devutility.internal</artifactId>
+			<version>1.1.17</version>
+		</dependency>
 	</dependencies>
 	<modules>
 		<module>devutility.test.database.spring-data-jpa</module>
