--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9006
-spring.application.name=spring-data-jpa
+spring.application.name=devutility-test-database-spring-data-jpa
 
 #Display SQL command.
 #spring.jpa.show-sql=true
