--- a/devutility.test.database.mybatis/pom.xml
+++ b/devutility.test.database.mybatis/pom.xml
@@ -39,5 +39,6 @@
 	<modules>
 		<module>devutility.test.database.mybatis-spring</module>
 		<module>devutility.test.database.mybatis-springboot</module>
+		<module>devutility.test.database.mybatis.single</module>
 	</modules>
 </project>
