--- a/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/application.properties
+++ b/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.login-username=admin
 spring.datasource.druid.stat-view-servlet.login-password=admin
+
+spring.datasource.druid.filter.stat.enabled=true
+spring.datasource.druid.filter.stat.db-type=mssql
+spring.datasource.druid.filter.stat.log-slow-sql=true
+spring.datasource.druid.filter.stat.slow-sql-millis=2000
