--- a/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
+++ b/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
@@ -3,9 +3,6 @@ db1.sqlserver.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 db1.sqlserver.url=${DB1_URL:jdbc:sqlserver://127.0.0.1:1433;DatabaseName=MyTestDb1}
 db1.sqlserver.username=${DB1_UID:tester}
 db1.sqlserver.password=${DB1_PWD:tester}
-
-db1.sqlserver.mybatis.config-location=classpath:datasource1/mybatis-config.xml
-db1.sqlserver.type=com.alibaba.druid.pool.DruidDataSource
 db1.sqlserver.initial-size=1
 db1.sqlserver.min-idle=1
 db1.sqlserver.max-active=20
@@ -19,10 +16,12 @@ db1.sqlserver.test-on-return=false
 db1.sqlserver.pool-prepared-statements=false
 db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
 
-db1.sqlserver.filter.stat.enabled=true
-db1.sqlserver.filter.stat.db-type=mssql
-db1.sqlserver.filter.stat.log-slow-sql=true
-db1.sqlserver.filter.stat.slow-sql-millis=2000
+db1.sqlserver.mybatis.config-location=classpath:datasource1/mybatis-config.xml
+
+db1.sqlserver.druid.filter.stat.enabled=true
+db1.sqlserver.druid.filter.stat.db-type=mssql
+db1.sqlserver.druid.filter.stat.log-slow-sql=true
+db1.sqlserver.druid.filter.stat.slow-sql-millis=2000
 
 #Data source 2
 db2.mysql.driver-class-name=com.mysql.jdbc.Driver
