--- a/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
+++ b/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
@@ -18,10 +18,10 @@ db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
 
 db1.sqlserver.mybatis.config-location=classpath:datasource1/mybatis-config.xml
 
-db1.sqlserver.druid.filter.stat.enabled=true
-db1.sqlserver.druid.filter.stat.db-type=mssql
-db1.sqlserver.druid.filter.stat.log-slow-sql=true
-db1.sqlserver.druid.filter.stat.slow-sql-millis=2000
+db1.sqlserver.filter.stat.enabled=true
+db1.sqlserver.filter.stat.db-type=mssql
+db1.sqlserver.filter.stat.log-slow-sql=true
+db1.sqlserver.filter.stat.slow-sql-millis=200
 
 #Data source 2
 db2.mysql.driver-class-name=com.mysql.jdbc.Driver
@@ -41,7 +41,9 @@ db2.mysql.test-on-return=false
 db2.mysql.pool-prepared-statements=false
 db2.mysql.max-pool-prepared-statement-per-connection-size=20
 
+db2.mysql.mybatis.config-location=classpath:datasource2/mybatis-config.xml
+
 db2.mysql.filter.stat.enabled=true
 db2.mysql.filter.stat.db-type=mysql
 db2.mysql.filter.stat.log-slow-sql=true
-db2.mysql.filter.stat.slow-sql-millis=2000
+db2.mysql.filter.stat.slow-sql-millis=1000
