--- a/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
+++ b/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot/src/main/resources/db.properties
@@ -24,7 +24,7 @@ db1.sqlserver.filter.stat.log-slow-sql=true
 db1.sqlserver.filter.stat.slow-sql-millis=200
 
 #Data source 2
-db2.mysql.driver-class-name=com.mysql.jdbc.Driver
+db2.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
 db2.mysql.url=${DB2_URL:jdbc:mysql://127.0.0.1:3306/Test}?useUnicode=true&useSSL=false
 db2.mysql.username=${DB2_UID:tester}
 db2.mysql.password=${DB2_PWD:tester}
