--- a/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
+++ b/devutility.test.database.spring-data/devutility.test.database.spring-data-jpa/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=devutility-test-database-spring-data-jpa
 
 #Display SQL command.
 #spring.jpa.show-sql=true
+logging.level.org.hibernate.type=TRACE
 
 #Display SQL command for SQL Server. 
 #logging.level.com.microsoft.sqlserver.jdbc=debug
