--- a/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot-multi-source/src/main/resources/db.properties
+++ b/devutility.test.database.mybatis/devutility.test.database.mybatis-springboot-multi-source/src/main/resources/db.properties
@@ -9,9 +9,9 @@ db1.sqlserver.max-active=20
 db1.sqlserver.max-wait=60000
 db1.sqlserver.time-between-eviction-runs-millis=60000
 db1.sqlserver.min-evictable-idle-time-millis=300000
-db1.sqlserver.validation-query=select 1
-db1.sqlserver.test-on-borrow=true
-db1.sqlserver.test-While-Idle=true
+db1.sqlserver.validation-query=Select 1
+db1.sqlserver.test-on-borrow=false
+db1.sqlserver.test-while-Idle=true
 db1.sqlserver.test-on-return=false
 db1.sqlserver.pool-prepared-statements=false
 db1.sqlserver.max-pool-prepared-statement-per-connection-size=20
@@ -34,9 +34,9 @@ db2.mysql.max-active=20
 db2.mysql.max-wait=60000
 db2.mysql.time-between-eviction-runs-millis=60000
 db2.mysql.min-evictable-idle-time-millis=300000
-db2.mysql.validation-query=select 1
+db2.mysql.validation-query=Select 1
 db2.mysql.test-on-borrow=true
-db2.mysql.test-While-Idle=true
+db2.mysql.test-while-Idle=true
 db2.mysql.test-on-return=false
 db2.mysql.pool-prepared-statements=false
 db2.mysql.max-pool-prepared-statement-per-connection-size=20
